--- a/CHEME-5760-PS2-AssetSelectionProblem-Fall-2023.ipynb
+++ b/CHEME-5760-PS2-AssetSelectionProblem-Fall-2023.ipynb
@@ -18,9 +18,12 @@
   {
    "cell_type": "markdown",
    "id": "714c5346-c7ac-44f1-a5bc-a58d77ce90d3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Setup"
+    "## Setup\n",
+    "The computations in this lab (or example) are enabled by the [VLDecisionsPackage.jl](https://github.com/varnerlab/VLDecisionsPackage.jl.git) and several external `Julia` packages. To load the required packages and any custom codes the teaching team has developed to work with these packages, we [include](https://docs.julialang.org/en/v1/manual/code-loading/) the `Include.jl` file):"
    ]
   },
   {
@@ -49,6 +52,52 @@
    ],
    "source": [
     "include(\"Include.jl\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d931ba88-ea69-42c7-a413-ea7d8a17cfe1",
+   "metadata": {},
+   "source": [
+    "### Packages\n",
+    "`Include.jl` loads several external packages that we will use for our excercise:\n",
+    "* [DataFrames.jl](https://dataframes.juliadata.org/stable/) provides a set of tools for working with tabular data in [Julia](https://julialang.org). Its design and functionality are similar to those of [Pandas (in Python)](https://pandas.pydata.org) and [data.frame, data.table and dplyr (in R)](https://dplyr.tidyverse.org), making it a great general purpose data science tool.\n",
+    "* [Plots.jl](https://docs.juliaplots.org/stable/) is a plotting library in [Julia](https://julialang.org). [Plots.jl](https://docs.juliaplots.org/stable/) exports the `plot(...)` function which we use to visualize data.\n",
+    "* [VLDecisionsPackage.jl](https://github.com/varnerlab/VLDecisionsPackage.jl.git) holds the codes and types for most of the computation used in the problem set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0ffe379-26ae-445e-88c4-b70773a4aeb7",
+   "metadata": {},
+   "source": [
+    "### Types\n",
+    "The `MyMarkowitzRiskyAssetOnlyPortfiolioChoiceProblem` type, which encodes data required to compute the efficient frontier for a collection of $N$ risky assets only, has the fields:\n",
+    "* `Σ::Array{Float64,2}` is the $N\\times{N}$ covariance matrix, with entries $cov(r_{i},r_{j})$\n",
+    "* `μ::Array{Float64,1}` is the $N\\times{1}$ vector of expected return values with elements $\\mathbb{E}(r_{i})$\n",
+    "* `bounds::Array{Float64,2}` is an $N\\times{2}$ array that holds the upper and lower bound for the asset allocation. Each row corresponds to an asset, while the first column is the lower bound, and the second column is the upper bound on the asset allocation fraction.\n",
+    "* `R::Float64` denotes the lower bound on the desired return\n",
+    "* `initial::Array{Float64,1}` is the $N\\times{1}$ array of initial guesses\n",
+    "\n",
+    "The `MyMarkowitzRiskyRiskFreePortfiolioChoiceProblem`, which encodes data required to compute the optimal allocation for a portfolio containing $N$ risky assets and a single risk-free asset, has the fields:\n",
+    "* `Σ::Array{Float64,2}` is the $N\\times{N}$ covariance matrix, with entries $cov(r_{i},r_{j})$\n",
+    "* `μ::Array{Float64,1}` is the $N\\times{1}$ vector of expected return values, with elements $\\mathbb{E}(r_{i})$\n",
+    "* `bounds::Array{Float64,2}` is an $N\\times{2}$ array that holds the upper and lower bound for the asset allocation. Each row corresponds to an asset, while the first column is the lower bound, and the second column is the upper bound on the asset allocation fraction.\n",
+    "* `R::Float64` denotes the lower bound on the desired return\n",
+    "* `initial::Array{Float64,1}` is the $N\\times{1}$ array of initial guesses\n",
+    "* `risk_free_rate::Float64` is the risk-free rate of return, e.g., the rate of return on a [10-year US Treasury Note](https://www.cnbc.com/bonds/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5feffb0-cda0-43f5-bc36-96c63790f21e",
+   "metadata": {},
+   "source": [
+    "#### Functions\n",
+    "* The `MyPortfolioDataSet()` function loads the risky asset price dataset, and returns it as a [DataFrame.jl](https://dataframes.juliadata.org/stable/) instance. \n",
+    "* The ` MyFirmMappingDataSet()` function load the firm mapping, and returns it as a [DataFrame.jl](https://dataframes.juliadata.org/stable/) instance.\n",
+    "* The `build(...)` is a factory method that takes the type of object that you wish to construct, and the parameters required to construct the object, e.g., the fields of the `MyMarkowitzRiskyAssetOnlyPortfiolioChoiceProblem` or `MyMarkowitzRiskyRiskFreePortfiolioChoiceProblem` types.\n",
+    "* The `solve(...)` method takes a `problem` type, e.g., an instance of `MyMarkowitzRiskyRiskFreePortfiolioChoiceProblem` and returns the solution to the problem as a [Julia Dictionary](https://docs.julialang.org/en/v1/base/collections/#Dictionaries) instance."
    ]
   },
   {
@@ -198,7 +247,7 @@
    "id": "e0f9c1c4-ec1a-4fe3-b57e-15d5ae960067",
    "metadata": {},
    "source": [
-    "Finally, to interconvert between the `firm_index` and `ticker` representation of the firms in the dataset, we create a `ticker_lookup_dictionary` which holds the ticker symbols as the keys and the `firm_index` as the value:"
+    "To interconvert between the `firm_index` and `ticker` representation of the firms in the dataset, we create a `ticker_lookup_dictionary` which holds the ticker symbols as the keys and the `firm_index` as the value:"
    ]
   },
   {
@@ -208,23 +257,10 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: `firm_mapping` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `firm_mapping` not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[5]:2"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ticker_lookup_dictionary = Dict{String,Int64}();\n",
-    "number_of_map_elements = nrow(firm_mapping);\n",
+    "number_of_map_elements = nrow(firm_mapping_df);\n",
     "for i ∈ 1:number_of_map_elements\n",
     "    ticker = firm_mapping_df[i,:Symbol];    \n",
     "    ticker_lookup_dictionary[ticker] = i;\n",
@@ -250,22 +286,29 @@
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "KeyError: key \"AAPL\" not found",
-     "output_type": "error",
-     "traceback": [
-      "KeyError: key \"AAPL\" not found",
-      "",
-      "Stacktrace:",
-      " [1] getindex(h::Dict{String, Int64}, key::String)",
-      "   @ Base ./dict.jl:484",
-      " [2] top-level scope",
-      "   @ In[6]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "ticker_lookup_dictionary[\"AAPL\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c77499fa-3e5f-4472-a09f-f237fddc16dd",
+   "metadata": {},
+   "source": [
+    "### Compute the covariance and expected yield for all firms in the dataset\n",
+    "The expected return $\\mathbb{E}(r_{i})$ and covariance matrix $\\Sigma$ will be used in your calculations, so we'll provide values for both of these items for the entire data set (all `N = 458` companies), and then you can pick out which forms you are interested in. \n",
+    "\n",
+    "First, we compute the expected (annualized) log return by passing the `dataset` and the entire list of firms we have in the dataset (held in the $N\\times{1}$ `all_firms` array) to the `log_return_matrix(...)` method. The result is stored in the `all_firms_return_matrix` variable, a $T-1\\times{N}$ array of log return values. Each row of `all_firms_return_matrix` corresponds to a time-value, while each column corresponds to a firm:"
    ]
   },
   {
@@ -277,39 +320,47 @@
    },
    "outputs": [],
    "source": [
-    "all_return_matrix = log_return_matrix(dataset, all_firms; Δt = (1/252));\n",
-    "all_covariance_matrix = (1/100)*cov(all_return_matrix);\n",
-    "all_expected_return = mean(all_return_matrix, dims=1) |> vec |> x-> exp.(x) .- 1;"
+    "all_firms_return_matrix = log_return_matrix(dataset, all_firms; Δt = (1/252));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "243783bd-1930-4967-849a-25b8e9c6c84c",
+   "metadata": {},
+   "source": [
+    "Next, we estimate the `covariance_matrix` from the `all_firms_return_matrix` using the `cov(...)` function, which is exported by the [Statistics.jl package](https://docs.julialang.org/en/v1/stdlib/Statistics/). We store the $N\\times{N}$ covariance matrix in the $\\Sigma$ variable:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b364bba-05bd-4ae3-b14c-e5200f57bc33",
+   "id": "aabfb824-830f-4869-b22d-8283b7294510",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: `firm_mapping` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `firm_mapping` not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ ./In[8]:4"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_tickers_array = Array{String,1}()\n",
-    "for i ∈ eachindex(all_firms)\n",
-    "    firm_index = all_firms[i];\n",
-    "    push!(all_tickers_array, firm_mapping[firm_index, :Symbol])\n",
-    "end\n",
-    "all_tickers_array"
+    "Σ = cov(all_firms_return_matrix) |> x-> x*(1/100);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "044a3b93-3165-41fd-8a2b-e509e105688e",
+   "metadata": {},
+   "source": [
+    "Finally, we estimate the expected return for each firm from the `all_firms_return_matrix` using the `mean(...)` function, which is exported by the [Statistics.jl package](https://docs.julialang.org/en/v1/stdlib/Statistics/). We set the $N\\times{1}$ vector of expected values, i.e., $\\mathbb{E}(r_{1}),\\dotsc,\\mathbb{E}(r_{N})$ in the variable $\\mu$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9c2049b-10eb-45e9-89b7-a06af981c805",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "μ = mean(all_firms_return_matrix, dims=1) |> vec |> x-> exp.(x) .- 1;"
    ]
   },
   {
@@ -317,13 +368,13 @@
    "id": "b79b78fc-1a2b-47b4-9f84-9e0480b9bdb1",
    "metadata": {},
    "source": [
-    "### Set constants\n",
-    "Finally, we set some constant values that are used in the computation of the efficient frontier and the capital allocation line:"
+    "### Set constants used in the calculations\n",
+    "Lastly, we set some constant values that are used in the computation of the efficient frontier and the capital allocation line:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bd310871-2df2-43c8-b17d-ce898553c64e",
    "metadata": {
     "tags": []
@@ -352,79 +403,87 @@
    "id": "fa387502-39f2-45c3-a3d8-1a1a2da07e72",
    "metadata": {},
    "source": [
-    "Each firm is assigned an `index` (the `keys` of the `dataset` dictionary). Let's specify a list of `tickers` and look up the corresponding `firm_index` from the `ticker_lookup_dictionary`. We'll hold the indexes of the firms we are interested in in the `firms` array:"
+    "Specify five `ticker symbols`, e.g., `AAPL`, `MSFT`, etc that you are interested the `my_list_of_tickers` array. We'll hold then put the indexes of your five firms in the `my_list_of_firm_ids` array:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "f2b4915f-21c8-4f98-8148-f116fe01bf42",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "KeyError: key \"ADBE\" not found",
-     "output_type": "error",
-     "traceback": [
-      "KeyError: key \"ADBE\" not found",
-      "",
-      "Stacktrace:",
-      " [1] getindex(h::Dict{String, Int64}, key::String)",
-      "   @ Base ./dict.jl:484",
-      " [2] top-level scope",
-      "   @ ./In[10]:4"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_list_of_tickers = [\"ADBE\",\"ZTS\",\"AAPL\"];\n",
-    "my_list_of_firms = Array{Int64,1}();\n",
+    "my_list_of_firm_ids = Array{Int64,1}();\n",
     "for ticker ∈ my_list_of_tickers\n",
     "    firm_index = ticker_lookup_dictionary[ticker];    \n",
-    "    push!(my_list_of_firms, firm_index)\n",
+    "    push!(my_list_of_firm_ids, firm_index)\n",
     "end"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3be6f3e1-4819-4780-922f-aebb64cbd4bd",
+   "metadata": {},
+   "source": [
+    "Next, for each the firms you selected, find the lowest correlation partner firm by analyzing the entries of the covariance matrix. Add the index of the partner firm to the `my_list_of_firm_ids` array using the `push!(...)` function:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "id": "fe58ed02-c4bf-4a67-b851-6d28e48c64f7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# fill me in here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24c5bec6-6237-492e-88e5-31635edda3aa",
+   "metadata": {},
+   "source": [
+    "Now that you have selected the firms in your risky portfolio, we'll compute the firm-specific expected return vector and covariance matrix. We'll store these in the $\\hat{\\mu}$ and $\\hat{\\Sigma}$ variables, respectively. First, we construct the $\\hat{\\mu}$ vector:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "df014d8e-ab91-4e73-b236-ceaea46b4c75",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "my_expected_return_array = Array{Float64,1}();\n",
-    "for i ∈ eachindex(my_list_of_firms)\n",
-    "    firm_index = findfirst(x->x==my_list_of_firms[i], all_firms)\n",
-    "    push!(my_expected_return_array, all_expected_return[firm_index])\n",
+    "μ̂ = Array{Float64,1}();\n",
+    "for i ∈ eachindex(my_list_of_firm_ids)\n",
+    "    firm_index = findfirst(x->x==my_list_of_firm_ids[i], all_firms)\n",
+    "    push!(μ̂, μ[firm_index])\n",
     "end"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "59695873-7fac-4c96-8ce6-aeb8c4520bc4",
+   "cell_type": "markdown",
+   "id": "e4609a50-5da2-46ac-8b17-4c22cad2fec5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Float64[]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "my_expected_return_array"
+    "and then the covariance $\\hat{\\Sigma}$ matrix:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21fcf223-ffc6-45aa-b656-20c2711fa1f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -440,7 +499,7 @@
    "id": "6eaa5f34-b7ba-4161-974e-9ca941592689",
    "metadata": {},
    "source": [
-    "## Task 3: Compute the capital allocation line\n",
+    "## Task 3: Compute the capital allocation line for your collection of `N = 10` stocks and risk free asset\n",
     "Fill me in"
    ]
   },
@@ -454,9 +513,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b7e8656-a870-4653-85c8-aeb1e265d087",
+   "metadata": {},
+   "source": [
+    "## Disclaimer and Risks\n",
+    "\n",
+    "__This content is offered solely for training and informational purposes__. No offer or solicitation to buy or sell securities or derivative products or any investment or trading advice or strategy is made, given, or endorsed by the teaching team.\n",
+    "\n",
+    "__Trading involves risk__. Carefully review your financial situation before investing in securities, futures contracts, options, or commodity interests. Past performance, whether actual or indicated by historical tests of strategies, is no guarantee of future performance or success. Trading is generally inappropriate for someone with limited resources, investment or trading experience, or a low-risk tolerance. Only risk capital that is not required for living expenses.\n",
+    "\n",
+    "__You are fully responsible for any investment or trading decisions you make__. Such decisions should be based solely on evaluating your financial circumstances, investment or trading objectives, risk tolerance, and liquidity needs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27bc43c9-98ff-4f89-b560-f40653716656",
+   "id": "f55ae29a-01da-4945-8f5a-5ea872442ac1",
    "metadata": {},
    "outputs": [],
    "source": []
