--- a/CHEME-5760-PS2-AssetSelectionProblem-Fall-2023.ipynb
+++ b/CHEME-5760-PS2-AssetSelectionProblem-Fall-2023.ipynb
@@ -5,7 +5,7 @@
    "id": "b591adc4-0afa-4cd6-9e9d-b408fb7edb7e",
    "metadata": {},
    "source": [
-    "# PS2: Selection of an Uncorrelated Tangent Portfolio\n",
+    "# PS2: Selection of a Tangent Portfolio and Your Asset Allocation\n",
     "The objective of `PS2` is to walk you through the calculation of your position on the capital allocation line that considers your risk aversion. This problem set is based on the `L5b` capital allocation example notebook, which is available on the [CHEME 5760 example repository](https://github.com/varnerlab/CHEME-5760-Examples-F23.git). \n",
     "\n",
     "#### Problem statement\n",
